--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title> Movie rating Game</title>
-    <link rel="stylesheet" href="/assets/normalize.css">
-    <link rel="stylesheet" href="/assets/skeleton.css">
-    <link rel="stylesheet" href="/assets/style.css">
-
-
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/skeleton.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <header> Movie rating game</header>
+
 <body>
     <div class="current-score"></div>
-    
 
     <div class="high-score"></div>
 
     <div class="movie-container">
 
         <div class="movie-poster">
-            <img class="movie-display" src = "#" alt="Name of Movie" >
+            <img class="movie-display" src="#" alt="Name of Movie">
         </div>
 
         <div class="movie-title"></div>
@@ -32,19 +29,17 @@
     <div class="review-container"></div>
 
     <div class="button-container">
-        <input class= btn type="radio" name="answer1" id="answer1">0-20
-        <input class= btn type="radio" name="answer1" id="answer2">21-40
-        <input class= btn type="radio" name="answer1" id="answer3">41-60
-        <input class= btn type="radio" name="answer1" id="answer4">61-80
-        <input class= btn type="radio" name="answer1" id="answer5">81-100
+        <input class=btn type="radio" name="answer1" id="answer1">0-20
+        <input class=btn type="radio" name="answer1" id="answer2">21-40
+        <input class=btn type="radio" name="answer1" id="answer3">41-60
+        <input class=btn type="radio" name="answer1" id="answer4">61-80
+        <input class=btn type="radio" name="answer1" id="answer5">81-100
     </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/app.js"></script>
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./js/app.js"></script>
-
+    <script src="js/app.js"></script>
 </body>
 <footer>Thanks for playing!</footer>
-</html>
 
+</html>
