--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> Movie rating Game</title>
-    <link rel="stylesheet" href="/assets/normalize.css">
-    <link rel="stylesheet" href="/assets/skeleton.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/skeleton.css">
+    <link rel="stylesheet" href="assets/style.css">
 
 
 </head>
@@ -38,11 +38,9 @@
         <input class= btn type="radio" name="answer1" id="answer4">61-80
         <input class= btn type="radio" name="answer1" id="answer5">81-100
     </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/app.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 <footer>Thanks for playing!</footer>
