container for giphy to be inserted

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         </div>
     </div>
 
-    <div class="review-container center">REVIEW</div>
+    <div class="review-wrapper d-flex row">
+        <div class="review-container center">REVIEW</div>
+        <img id="giphy-img" src="" alt="reaction giphy">
+    </div>
+ 
 
     <div class="button-container center">
        <p id="answer-prompt">Rotten Tomatoes Freshness:</p>
