GIPHY positive and negative reactions + Score rough draft

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
     </div>
 
-    <div class="review-wrapper d-flex row">
-        <div class="review-container center">REVIEW</div>
-        <img id="giphy-img" src="" alt="reaction giphy">
+    <div class="review-wrapper d-flex center">
+        <div class="review-container">REVIEW</div>
+        <img class="hidden" id="giphy-img" src="" alt="reaction giphy">
     </div>
  
 
