restart button styling and functionality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <img class="movie-display" src = "#">
         </div>
     </div>
-
+    <div class="center">
+        <button class="hidden" id="restart"> Restart the Game</button> 
+    </div>    
     <div class="review-wrapper d-flex center">
         <div class="review-container">REVIEW</div>
         <img class="hidden" id="giphy-img" src="" alt="reaction giphy">
