pulling reset button changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<header class="center"> Movie rating game</header>
+<header class="center">Certified Tomatoes</header>
 <body>
     <div class="current-score">
         <span>score:</span><span id="score"></span>
