--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Movie rating Game</title>
+    <title>Welcome to Certified Tomatoes!</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Comfortaa:wght@300&family=Inspiration&family=Play&family=Source+Code+Pro:wght@200;300;400&family=Trispace:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/normalize.css">
