--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 </head>
-<header class="center"> Movie rating game</header>
+<header class="center">Certified Tomatoes</header>
 
 <body>
     <div class="current-score">
